# nextjs-geist-font-example

calculadora-sfml/: CMakeLists.txt  FUENTE_ARIAL.txt  INSTRUCCIONES.md  Makefile  README.md  compilar_linux.sh  compilar_windows.bat  main.cpp
